--- a/index.html
+++ b/index.html
@@ -36,21 +36,15 @@
         background: none;
         cursor: pointer;
       }
-      /* 현재 내 위치 이동 버튼 (GPS 아이콘 포함) */
+      /* 현재 내 위치 이동 버튼 (GPS 아이콘이 내 위치 표시용 마커와 같은 디자인) */
       #centerLocation {
         width: 30px;
         height: 30px;
-        background: #007bff;
+        /* Use same style as mobile marker */
+        background: radial-gradient(circle, #00c6ff 0%, #0072ff 100%);
+        border: 3px solid white;
         border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-      }
-      #centerLocation svg {
-        width: 18px;
-        height: 18px;
-        fill: white;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.3);
       }
       /* 방문 카운터 스타일 */
       #visitCounter {
@@ -71,7 +65,7 @@
         font-size: 16px;
         display: none;
       }
-      /* 팝업 내 아이템 박스 (툴팁) 스타일 */
+      /* 팝업 내 아이템 박스 (툴팁) */
       .item-box {
         position: relative;
         padding: 10px 40px 10px 10px;
@@ -98,38 +92,41 @@
         max-height: 400px;
         max-width: calc(100vw - 20px);
       }
-      /* 고급 컨트롤 패널 (전체 방문 확인, 해제) */
+      /* 고급 컨트롤 패널: 전체 방문 확인/해제 */
       #advancedPanel {
         position: absolute;
-        top: 10px;
-        right: -200px; /* hidden off screen */
+        top: 50%;
+        right: -200px; /* hide offscreen initially */
         width: 180px;
         background: #f9f9f9;
         border: 1px solid #ccc;
-        border-radius: 4px;
+        border-radius: 4px 0 0 4px;
         padding: 10px;
-        box-shadow: -2px 2px 6px rgba(0,0,0,0.3);
+        box-shadow: -2px 2px 6px rgba(0, 0, 0, 0.3);
+        transform: translateY(-50%);
         transition: right 0.3s;
         z-index: 1100;
       }
-      /* 고급 패널 토글 버튼 (화살표 모양) */
+      /* 고급 패널 토글 버튼: 배치는 우측 화면 중간에 */
       #panelToggle {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        width: 20px;
-        height: 40px;
+        position: fixed;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+        width: 30px;
+        height: 30px;
         background: #28a745;
-        border-radius: 4px 0 0 4px;
+        border-radius: 50%;
         display: flex;
         align-items: center;
         justify-content: center;
         cursor: pointer;
         z-index: 1150;
+        box-shadow: -2px 2px 6px rgba(0, 0, 0, 0.3);
       }
       #panelToggle svg {
-        width: 16px;
-        height: 16px;
+        width: 20px;
+        height: 20px;
         fill: white;
         transition: transform 0.3s;
       }
@@ -140,34 +137,30 @@
     <div id="infoDialog"></div>
     <!-- 지도 표시 영역 -->
     <div id="map"></div>
-    <!-- 상단 패널: 기본 컨트롤 버튼 -->
+    <!-- 상단 기본 컨트롤바 -->
     <div id="controls">
-      <button id="centerLocation" title="현재 내 위치로 이동">
-        <!-- GPS 아이콘 SVG -->
-        <svg viewBox="0 0 24 24">
-          <path d="M12 0C5.37 0 0 5.37 0 12s5.37 12 12 12 12-5.37 12-12S18.63 0 12 0zm3.93 4.67l-1.41 1.41L10.83 7H13a1 1 0 1 1 0 2H8.17l-.69.69-1.41-1.41L10.59 7 8.07 4.67l1.41-1.41L12 5.17l2.52-2.91 1.41 1.41zM12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"/>
-        </svg>
-      </button>
+      <button id="centerLocation" title="현재 내 위치로 이동"></button>
       <span id="visitCounter">0 / 0</span>
-    </div>
-    <!-- 고급 패널 토글 버튼 (화살표 아이콘) -->
-    <div id="panelToggle" title="고급 버튼 보이기/숨기기">
-      <!-- 우측으로 열리는 화살표 SVG, 회전 효과로 토글 표시 -->
-      <svg viewBox="0 0 24 24">
-        <path d="M8.59 16.34L13.17 12 8.59 7.66 10 6.25l6 6-6 6z"/>
-      </svg>
     </div>
     <!-- 고급 컨트롤 패널: 전체 방문 확인, 전체 방문 해제 -->
     <div id="advancedPanel">
-      <button id="checkAll">전체 방문 확인</button><br/><br/>
+      <button id="checkAll">전체 방문 확인</button>
+      <br /><br />
       <button id="uncheckAll">전체 방문 해제</button>
+    </div>
+    <!-- 고급 패널 토글 버튼 (화살표 아이콘) -->
+    <div id="panelToggle" title="고급 버튼 보이기/숨기기">
+      <svg viewBox="0 0 24 24">
+        <!-- 초기 상태 arrow pointing left (panel hidden) -->
+        <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z" />
+      </svg>
     </div>
     <script>
       // 전역 변수
       let map;
       let markerGroups = []; // 좌표별 그룹: 그룹당 다수의 장소 정보를 포함
       const STORAGE_KEY = "visitedState";
-      let mobileMarker = null;  // 모바일 기기 현재 위치 마커
+      let mobileMarker = null;  // 모바일 현재 위치 마커
 
       // 방문 상태 저장
       function saveVisitedState() {
@@ -201,7 +194,7 @@
         document.getElementById("visitCounter").textContent = `${visitedItems} / ${totalItems}`;
       }
 
-      // 팝업 컨텐츠 생성 (툴팁 내용)
+      // 팝업 컨텐츠 생성 (툴팁)
       function createPopupContent(group, groupIndex) {
         let content = `<div id="popup-container-${groupIndex}" class="popup-container" onclick="event.stopPropagation()">`;
         group.data.forEach((item, index) => {
@@ -224,7 +217,7 @@
         return content;
       }
 
-      // 기존 장소 핀 아이콘 유지 (변경 없음)
+      // 기존 장소 핀 아이콘 유지
       function getCustomDivIcon(group) {
         const allVisited = group.data.every((item) => item.visited);
         let color, opacity;
@@ -267,7 +260,7 @@
         };
       }
 
-      // 마커와 팝업 업데이트 (내부 스크롤 보존)
+      // 마커 및 팝업 업데이트 (내부 스크롤 보존)
       function updateMarkerIcon(group) {
         group.marker.setIcon(getCustomDivIcon(group));
         if (group.infoWindow) {
@@ -307,7 +300,7 @@
       }
       window.handleItemClick = handleItemClick;
 
-      // 내 위치로 지도 중심 이동 및 줌 (200미터 반경 보이도록 줌 17)
+      // 내 위치로 지도 중심 이동 및 줌 (약 200미터 반경 보이도록 줌 17)
       function centerOnMyLocation() {
         if (mobileMarker && map) {
           const pos = mobileMarker.getPosition();
@@ -316,11 +309,11 @@
         }
       }
 
-      // 고급 버튼 토글: 고급 패널의 위치를 조정하여 보여주거나 숨깁니다.
+      // 고급 패널 토글 함수
       function toggleAdvancedPanel() {
         const panel = document.getElementById("advancedPanel");
         const toggleBtn = document.getElementById("panelToggle");
-        if (panel.style.right === "0px") {
+        if (panel.style.right === "10px") {
           panel.style.right = "-200px";
           toggleBtn.querySelector("svg").style.transform = "rotate(0deg)";
         } else {
@@ -335,7 +328,6 @@
           .then((response) => response.json())
           .then((json) => {
             markerGroups = [];
-            // 그룹화: 동일한 위도, 경도인 항목을 하나로 묶기
             json.data.forEach((entry) => {
               const key = entry.lat + "," + entry.lon;
               let group = markerGroups.find((g) => g.key === key);
@@ -345,7 +337,6 @@
               }
               group.data.push({ name: entry.name, owner: entry.owner, address: entry.address, visited: false });
             });
-            // 방문 상태 불러오기
             const storedState = loadVisitedState();
             if (storedState) {
               markerGroups.forEach((group) => {
@@ -358,7 +349,6 @@
             }
             updateVisitCounter();
 
-            // 평균 좌표 계산
             let sumLat = 0, sumLon = 0;
             markerGroups.forEach((group) => {
               sumLat += group.lat;
@@ -367,22 +357,20 @@
             const avgLat = sumLat / markerGroups.length;
             const avgLon = sumLon / markerGroups.length;
 
-            // Naver Map 생성 (줌 13)
             map = new naver.maps.Map("map", {
               center: new naver.maps.LatLng(avgLat, avgLon),
               zoom: 13
             });
 
-            // 각 그룹에 대해 마커 생성, 클릭 시 툴팁 열기
             markerGroups.forEach((group, index) => {
               group.marker = new naver.maps.Marker({
                 position: new naver.maps.LatLng(group.lat, group.lon),
                 map: map,
-                icon: getCustomDivIcon(group),
+                icon: getCustomDivIcon(group)
               });
 
               naver.maps.Event.addListener(group.marker, "click", function () {
-                // 모든 열려 있는 InfoWindow 닫기
+                // 닫혀 있는 InfoWindow 닫기
                 markerGroups.forEach((g) => {
                   if (g.infoWindow && !g.infoWindow.justOpened) {
                     g.infoWindow.close();
@@ -396,12 +384,12 @@
                   const content = createPopupContent(group, index);
                   group.infoWindow = new naver.maps.InfoWindow({
                     content: content,
-                    disableAnchor: true,
+                    disableAnchor: true
                   });
                   group.infoWindow.open(map, group.marker);
                   group.infoWindow.justOpened = true;
                   setTimeout(() => { delete group.infoWindow.justOpened; }, 100);
-                  // 팝업이 화면 상단에 있다면 아래로 pan 처리
+                  // pan if marker near top
                   setTimeout(() => {
                     if (map.getProjection) {
                       const markerPoint = map.getProjection().fromCoordToOffset(group.marker.getPosition());
@@ -420,7 +408,6 @@
               });
             });
 
-            // 문서 클릭 시 InfoWindow 닫기 (툴팁 내부 클릭 제외)
             document.addEventListener("click", function (e) {
               if (e.target.closest(".popup-container")) return;
               markerGroups.forEach((group) => {
@@ -498,7 +485,6 @@
       document.getElementById("centerLocation").addEventListener("click", centerOnMyLocation);
       document.getElementById("panelToggle").addEventListener("click", toggleAdvancedPanel);
 
-      // 정보 다이얼로그 표시 함수
       function showInfoDialog(message) {
         const dialog = document.getElementById("infoDialog");
         dialog.innerText = message;
