--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
         background: none;
         cursor: pointer;
       }
-      /* 현재 내 위치 이동 버튼 (GPS 아이콘이 내 위치 표시용 마커와 같은 디자인) */
+      /* 현재 내 위치 이동 버튼: 내 위치 마커와 동일한 디자인 */
       #centerLocation {
         width: 30px;
         height: 30px;
-        /* Use same style as mobile marker */
         background: radial-gradient(circle, #00c6ff 0%, #0072ff 100%);
         border: 3px solid white;
         border-radius: 50%;
@@ -85,16 +84,16 @@
       .item-box div {
         word-wrap: break-word;
       }
-      /* 팝업 컨테이너: 최대 높이와 너비 제한 */
+      /* 팝업 컨테이너 */
       .popup-container {
         cursor: default;
         overflow-y: auto;
         max-height: 400px;
         max-width: calc(100vw - 20px);
       }
-      /* 고급 컨트롤 패널: 전체 방문 확인/해제 */
+      /* 고급 컨트롤 패널 */
       #advancedPanel {
-        position: absolute;
+        position: fixed;
         top: 50%;
         right: -200px; /* hide offscreen initially */
         width: 180px;
@@ -107,7 +106,7 @@
         transition: right 0.3s;
         z-index: 1100;
       }
-      /* 고급 패널 토글 버튼: 배치는 우측 화면 중간에 */
+      /* 고급 패널 토글 버튼: 오른쪽 중앙에 배치 */
       #panelToggle {
         position: fixed;
         top: 50%;
@@ -133,32 +132,31 @@
     </style>
   </head>
   <body>
-    <!-- 상단 정보 다이얼로그 -->
+    <!-- 정보 다이얼로그 -->
     <div id="infoDialog"></div>
-    <!-- 지도 표시 영역 -->
+    <!-- 지도 영역 -->
     <div id="map"></div>
     <!-- 상단 기본 컨트롤바 -->
     <div id="controls">
       <button id="centerLocation" title="현재 내 위치로 이동"></button>
       <span id="visitCounter">0 / 0</span>
     </div>
-    <!-- 고급 컨트롤 패널: 전체 방문 확인, 전체 방문 해제 -->
+    <!-- 고급 컨트롤 패널 (전체 방문 확인, 전체 방문 해제 버튼) -->
     <div id="advancedPanel">
       <button id="checkAll">전체 방문 확인</button>
       <br /><br />
       <button id="uncheckAll">전체 방문 해제</button>
     </div>
-    <!-- 고급 패널 토글 버튼 (화살표 아이콘) -->
+    <!-- 고급 패널 토글 버튼 (우측 중앙에 자리함) -->
     <div id="panelToggle" title="고급 버튼 보이기/숨기기">
       <svg viewBox="0 0 24 24">
-        <!-- 초기 상태 arrow pointing left (panel hidden) -->
         <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z" />
       </svg>
     </div>
     <script>
       // 전역 변수
       let map;
-      let markerGroups = []; // 좌표별 그룹: 그룹당 다수의 장소 정보를 포함
+      let markerGroups = []; // 좌표별 그룹 배열
       const STORAGE_KEY = "visitedState";
       let mobileMarker = null;  // 모바일 현재 위치 마커
 
@@ -166,7 +164,7 @@
       function saveVisitedState() {
         const state = {};
         markerGroups.forEach((group) => {
-          state[group.key] = group.data.map((item) => item.visited);
+          state[group.key] = group.data.map(item => item.visited);
         });
         localStorage.setItem(STORAGE_KEY, JSON.stringify(state));
       }
@@ -186,15 +184,12 @@
 
       // 방문 카운터 업데이트
       function updateVisitCounter() {
-        const totalItems = markerGroups.reduce((count, group) => count + group.data.length, 0);
-        const visitedItems = markerGroups.reduce(
-          (count, group) => count + group.data.filter((item) => item.visited).length,
-          0
-        );
+        const totalItems = markerGroups.reduce((sum, group) => sum + group.data.length, 0);
+        const visitedItems = markerGroups.reduce((sum, group) => sum + group.data.filter(item => item.visited).length, 0);
         document.getElementById("visitCounter").textContent = `${visitedItems} / ${totalItems}`;
       }
 
-      // 팝업 컨텐츠 생성 (툴팁)
+      // 팝업 콘텐츠 생성 함수
       function createPopupContent(group, groupIndex) {
         let content = `<div id="popup-container-${groupIndex}" class="popup-container" onclick="event.stopPropagation()">`;
         group.data.forEach((item, index) => {
@@ -205,11 +200,8 @@
                 <em>대표자명: ${item.owner}</em><br/>
                 ${item.address}
               </div>
-              <input type="checkbox"
-                     data-group-index="${groupIndex}"
-                     data-item-index="${index}"
-                     ${item.visited ? "checked" : ""}
-                     onclick="event.stopPropagation(); handleCheckboxChange(event)" />
+              <input type="checkbox" data-group-index="${groupIndex}" data-item-index="${index}"
+                ${item.visited ? "checked" : ""} onclick="event.stopPropagation(); handleCheckboxChange(event)" />
             </div>
           `;
         });
@@ -217,9 +209,9 @@
         return content;
       }
 
-      // 기존 장소 핀 아이콘 유지
+      // 기존 장소 핀 아이콘 (변경하지 않음)
       function getCustomDivIcon(group) {
-        const allVisited = group.data.every((item) => item.visited);
+        const allVisited = group.data.every(item => item.visited);
         let color, opacity;
         if (allVisited) {
           color = "grey";
@@ -240,27 +232,21 @@
         const html = `
           <div style="position: relative; width: 25px; height: 41px;">
             <img src="${iconUrl}" style="width: 25px; height: 41px; opacity: ${opacity};" />
-            ${
-              countText
-                ? `<div style="position: absolute; top: 0; left: 0; width: 25px; height: 41px; display: flex; align-items: center; justify-content: center;">
-                      <div style="background: rgba(0,0,0,0.4); border-radius: 50%; padding: 2px 4px; margin-top: -4px;">
-                        <span style="font-weight: bold; color: white; font-size: 12px; text-shadow: 1px 1px 2px black;">
-                          ${countText}
-                        </span>
-                      </div>
-                   </div>`
-                : ""
+            ${ countText ? `<div style="position: absolute; top: 0; left: 0; width: 25px; height: 41px;
+                          display: flex; align-items: center; justify-content: center;">
+                          <div style="background: rgba(0,0,0,0.4); border-radius: 50%;
+                          padding: 2px 4px; margin-top: -4px;">
+                            <span style="font-weight: bold; color: white; font-size: 12px;
+                            text-shadow: 1px 1px 2px black;">${countText}</span>
+                          </div>
+                        </div>` : ""
             }
           </div>
         `;
-        return {
-          content: html,
-          size: new naver.maps.Size(25, 41),
-          anchor: new naver.maps.Point(12, 41)
-        };
+        return { content: html, size: new naver.maps.Size(25, 41), anchor: new naver.maps.Point(12, 41) };
       }
 
-      // 마커 및 팝업 업데이트 (내부 스크롤 보존)
+      // 마커 및 팝업 업데이트 (스크롤 보존)
       function updateMarkerIcon(group) {
         group.marker.setIcon(getCustomDivIcon(group));
         if (group.infoWindow) {
@@ -290,7 +276,7 @@
       }
       window.handleCheckboxChange = handleCheckboxChange;
 
-      // 아이템 클릭 처리 (체크박스 토글)
+      // 아이템 클릭 처리 (토글)
       function handleItemClick(event, groupIndex, itemIndex) {
         const group = markerGroups[groupIndex];
         group.data[itemIndex].visited = !group.data[itemIndex].visited;
@@ -300,20 +286,22 @@
       }
       window.handleItemClick = handleItemClick;
 
-      // 내 위치로 지도 중심 이동 및 줌 (약 200미터 반경 보이도록 줌 17)
+      // 내 위치로 지도 중심 이동
       function centerOnMyLocation() {
         if (mobileMarker && map) {
           const pos = mobileMarker.getPosition();
           map.setCenter(pos);
-          map.setZoom(17);
+          map.setZoom(17); // 약 200미터 반경
         }
       }
 
-      // 고급 패널 토글 함수
+      // 고급 패널 토글 함수 처리
       function toggleAdvancedPanel() {
         const panel = document.getElementById("advancedPanel");
         const toggleBtn = document.getElementById("panelToggle");
-        if (panel.style.right === "10px") {
+        // Check computed style (convert to number of pixels)
+        const currentRight = window.getComputedStyle(panel).right;
+        if (currentRight === "10px") {
           panel.style.right = "-200px";
           toggleBtn.querySelector("svg").style.transform = "rotate(0deg)";
         } else {
@@ -325,12 +313,12 @@
       // 맵 초기화 및 마커 추가 (parsed.json 데이터 사용)
       function initMap() {
         fetch("parsed.json")
-          .then((response) => response.json())
-          .then((json) => {
+          .then(response => response.json())
+          .then(json => {
             markerGroups = [];
-            json.data.forEach((entry) => {
+            json.data.forEach(entry => {
               const key = entry.lat + "," + entry.lon;
-              let group = markerGroups.find((g) => g.key === key);
+              let group = markerGroups.find(g => g.key === key);
               if (!group) {
                 group = { key: key, lat: parseFloat(entry.lat), lon: parseFloat(entry.lon), data: [] };
                 markerGroups.push(group);
@@ -339,10 +327,10 @@
             });
             const storedState = loadVisitedState();
             if (storedState) {
-              markerGroups.forEach((group) => {
+              markerGroups.forEach(group => {
                 if (storedState[group.key] && storedState[group.key].length === group.data.length) {
-                  group.data.forEach((item, index) => {
-                    item.visited = storedState[group.key][index];
+                  group.data.forEach((item, idx) => {
+                    item.visited = storedState[group.key][idx];
                   });
                 }
               });
@@ -350,7 +338,7 @@
             updateVisitCounter();
 
             let sumLat = 0, sumLon = 0;
-            markerGroups.forEach((group) => {
+            markerGroups.forEach(group => {
               sumLat += group.lat;
               sumLon += group.lon;
             });
@@ -362,16 +350,16 @@
               zoom: 13
             });
 
-            markerGroups.forEach((group, index) => {
+            markerGroups.forEach((group, idx) => {
               group.marker = new naver.maps.Marker({
                 position: new naver.maps.LatLng(group.lat, group.lon),
                 map: map,
                 icon: getCustomDivIcon(group)
               });
 
-              naver.maps.Event.addListener(group.marker, "click", function () {
+              naver.maps.Event.addListener(group.marker, "click", function() {
                 // 닫혀 있는 InfoWindow 닫기
-                markerGroups.forEach((g) => {
+                markerGroups.forEach(g => {
                   if (g.infoWindow && !g.infoWindow.justOpened) {
                     g.infoWindow.close();
                     g.infoWindow = null;
@@ -381,7 +369,7 @@
                   group.infoWindow.close();
                   group.infoWindow = null;
                 } else {
-                  const content = createPopupContent(group, index);
+                  const content = createPopupContent(group, idx);
                   group.infoWindow = new naver.maps.InfoWindow({
                     content: content,
                     disableAnchor: true
@@ -389,7 +377,6 @@
                   group.infoWindow.open(map, group.marker);
                   group.infoWindow.justOpened = true;
                   setTimeout(() => { delete group.infoWindow.justOpened; }, 100);
-                  // pan if marker near top
                   setTimeout(() => {
                     if (map.getProjection) {
                       const markerPoint = map.getProjection().fromCoordToOffset(group.marker.getPosition());
@@ -401,35 +388,32 @@
                       map.panBy(0, 150);
                     }
                   }, 200);
-                  naver.maps.Event.addListener(group.infoWindow, "closeclick", function () {
+                  naver.maps.Event.addListener(group.infoWindow, "closeclick", function() {
                     group.infoWindow = null;
                   });
                 }
               });
             });
 
-            document.addEventListener("click", function (e) {
+            document.addEventListener("click", function(e) {
               if (e.target.closest(".popup-container")) return;
-              markerGroups.forEach((group) => {
+              markerGroups.forEach(group => {
                 if (group.infoWindow && !group.infoWindow.justOpened) {
                   group.infoWindow.close();
                   group.infoWindow = null;
                 }
               });
             });
-
-            const totalItems = markerGroups.reduce((count, group) => count + group.data.length, 0);
+            const totalItems = markerGroups.reduce((sum, group) => sum + group.data.length, 0);
             showInfoDialog(`전체 ${totalItems}개의 장소가 로드되었습니다.`);
             saveVisitedState();
           })
-          .catch((err) => {
-            console.error("data load error:", err);
-          });
+          .catch(err => console.error("data load error:", err));
 
         // 모바일 기기 현재 위치 추적
         if (navigator.geolocation) {
           navigator.geolocation.watchPosition(
-            function (position) {
+            function(position) {
               const lat = position.coords.latitude;
               const lon = position.coords.longitude;
               const currentLatLng = new naver.maps.LatLng(lat, lon);
@@ -454,7 +438,7 @@
                 mobileMarker.setPosition(currentLatLng);
               }
             },
-            function (error) {
+            function(error) {
               console.error("Geolocation error:", error);
             },
             {
@@ -467,16 +451,16 @@
 
       // 이벤트 리스너 등록
       document.getElementById("checkAll").addEventListener("click", () => {
-        markerGroups.forEach((group) => {
-          group.data.forEach((item) => (item.visited = true));
+        markerGroups.forEach(group => {
+          group.data.forEach(item => item.visited = true);
           updateMarkerIcon(group);
         });
         saveVisitedState();
         updateVisitCounter();
       });
       document.getElementById("uncheckAll").addEventListener("click", () => {
-        markerGroups.forEach((group) => {
-          group.data.forEach((item) => (item.visited = false));
+        markerGroups.forEach(group => {
+          group.data.forEach(item => item.visited = false);
           updateMarkerIcon(group);
         });
         saveVisitedState();
